# extrinsic_calibration

./: .gitignore  CMakeLists.txt  README.md  checkerboard.sublime-project
include/: myFunctions.h
src/: checkerboardtest.cpp  myFunctions.cpp
